--- a/BD/AuthorizationService/src/main/resources/application.properties
+++ b/BD/AuthorizationService/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=login
-server.port=8085
+server.port=${PORT:8085}
 
-spring.datasource.url=jdbc:mysql://localhost:3306/promoconnect
-spring.datasource.username=praveen
-spring.datasource.password=praveen
+spring.datasource.url=${jdbc:mysql://localhost:3306/promoconnect}
+spring.datasource.username=${praveen}
+spring.datasource.password=${praveen}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
