--- a/BD/AuthorizationService/src/main/resources/application.properties
+++ b/BD/AuthorizationService/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=login
 server.port=${PORT:8085}
 
-spring.datasource.url=${jdbc:mysql://localhost:3306/promoconnect}
-spring.datasource.username=${praveen}
-spring.datasource.password=${praveen}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -11,4 +11,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false 
 
 logging.level.org.springframework.security=DEBUG
- 
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.oauth2=DEBUG
