--- a/BD/AuthorizationService/Dockerfile
+++ b/BD/AuthorizationService/Dockerfile
@@ -1,8 +1,12 @@
-FROM maven:3-eclipse-temurin-17 As build 
+# ----------- Stage 1: Build -----------
+FROM maven:3-eclipse-temurin-17 AS build
+WORKDIR /app
 COPY . .
 RUN mvn clean package -DskipTests
 
-FROM eclipseeclipse-temurin:17-alpine
-COPY --from=build /target/*.jar demo.jar 
+# ----------- Stage 2: Run -------------
+FROM eclipse-temurin:17-alpine
+WORKDIR /app
+COPY --from=build /app/target/*.jar demo.jar
 EXPOSE 8085
-ENTRYPOINT ["java","-jar","demo-jar"] 
+ENTRYPOINT ["java", "-jar", "demo.jar"]
