--- a/BD/AuthorizationService/src/main/resources/application.properties
+++ b/BD/AuthorizationService/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update  
 spring.jpa.open-in-view=false  
-
+spring.jpa.show-sql=true
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.security.oauth2=DEBUG
